--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "request": "^2.88.0",
     "require": "^2.4.20"
   },
+  "engines": {
+    "node": "8.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/harkiratsinghsethi/basicNodeAPi.git"
